Configured GitHub action

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,8 +2,14 @@ ktor {
     deployment {
         port = 7077
         port = ${?PORT}
+//        sslPort = 7088
     }
     application {
         modules = [ net.davidschuld.MainKt.module ]
     }
+//    security {
+//        ssl {
+//
+//        }
+//    }
 }
