--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,9 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
     - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
@@ -31,6 +34,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build shadowJar
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
@@ -43,3 +49,4 @@ jobs:
         context: .
         push: true
         tags: dschuld/homeserver:latest
+        platforms: linux/amd64,linux/arm64
