--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,14 +2,17 @@ ktor {
     deployment {
         port = 7077
         port = ${?PORT}
-//        sslPort = 7088
+        sslPort = 7088
     }
     application {
-        modules = [ net.davidschuld.MainKt.module ]
+        modules = [ net.davidschuld.homeserver.lights.MainKt.module ]
     }
-//    security {
-//        ssl {
-//
-//        }
-//    }
+    security {
+        ssl {
+            keyStore = ${?KEYSTORE_PATH}
+            keyAlias = sampleAlias
+            keyStorePassword = ${?KEYSTORE_PASSWORD}
+            privateKeyPassword = ${?KEYSTORE_PASSWORD}
+        }
+    }
 }
