Updated main class config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,7 +5,7 @@ ktor {
         sslPort = 7088
     }
     application {
-        modules = [ net.davidschuld.homeserver.lights.MainKt.module ]
+        modules = [ net.davidschuld.homeserver.MainKt.module ]
     }
     security {
         ssl {
